# occlubio

./: .gitignore  OCCLUSION_ROBUST_FR_ARCHITECTURE.md  PLATFORM.md  README.md  REPORT.md  pyproject.toml  requirements-edge.txt  requirements-train.txt  requirements.txt
configs/: default.yaml
deepstream/: README.md  config_infer_primary_scrfd.txt  deepstream_app_config.txt
occlubio/: __init__.py  config.py  utils.py
occlubio/analytics/: __init__.py  identity_log.py
occlubio/api/: app.py  schemas.py
occlubio/db/: __init__.py  database.py  models.py
occlubio/gallery/: __init__.py  faiss_gallery.py
occlubio/pipeline/: __init__.py  aligner.py  antispoof.py  engine.py  face_analyzer.py  occlusion.py  quality.py  recognizer.py
occlubio/service/: __init__.py  face_service.py
occlubio/tracking/: __init__.py  tracker.py
occlubio/training/: __init__.py  dataset.py  losses.py  train.py
scripts/: benchmark.py  build_report.py  enroll.py  identify_video.py  make_demo.py  make_occluded_dataset.py  recognize_image.py  recognize_video.py
tests/: test_smoke.py
web/: index.html  login.html
